export interface Memento {
    restore(): void;
}
